@@ -1,5 +1,6 @@
 package com.than00ber.mcmg.game.minigames;
 
+import com.google.common.collect.ImmutableList;
 import com.than00ber.mcmg.Main;
 import com.than00ber.mcmg.game.MiniGame;
 import com.than00ber.mcmg.game.MiniGameEvent;
@@ -12,8 +13,6 @@ import com.than00ber.mcmg.util.config.GameProperty;
 import org.bukkit.World;
 import org.bukkit.potion.PotionEffect;
 import org.bukkit.potion.PotionEffectType;
-
-import java.util.List;
 
 public class PropHuntGame extends MiniGame {
 
@@ -37,16 +36,16 @@ public class PropHuntGame extends MiniGame {
     }
 
     @Override
-    public List<GameTeam> getGameTeams() {
-        return List.of(
+    public ImmutableList<GameTeam> getGameTeams() {
+        return ImmutableList.of(
                 GameTeams.HUNTERS,
                 GameTeams.PROPS
         );
     }
 
     @Override
-    public List<WinCondition> getWinConditions() {
-        return List.of(
+    public ImmutableList<WinCondition> getWinConditions() {
+        return ImmutableList.of(
                 WinConditions.NO_PROPS
         );
     }
